# manimations-repo-template

./: .gitignore  LICENSE  README.md  manimw.py  pyproject.toml  render
custom-mobjects/: README.md  pyproject.toml
custom-mobjects/src/custom_mobjects/: Tetraktys.py  __init__.py
src/: First.py  pyproject.toml
src/01-Pitagora/: Second.py
src/01-prima-relazione/: manimazione.py  manimazione2.py
src/02-Archimede/02-01-Storia/: Inner.py
src/custom-mobjects/: pyproject.toml
