[project]
name = "manimations-repo-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "custom-mobjects",
    "manim>=0.19.2",
    "ruff>=0.15.1",
]

[tool.uv.workspace]
members = [
    "custom-mobjects",
    "custom_mobjects",
]

[tool.uv.sources]
custom-mobjects = { workspace = true }
