[project]
name = "custom-mobjects"
version = "0.1.0"
description = "Custom Manim objects related to Pitagorici APS"
readme = "README.md"
authors = [
    { name = "Nickolausen", email = "nicholas.magi24@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
custom-mobjects = "custom_mobjects:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
